--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -86,7 +86,7 @@
       font-size: var(--md-font-size);
 
       &-wrapper {
-        padding: 5 24px 0;
+        padding: 5px 24px 0;
       }
     }
   }
