--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -144,6 +144,51 @@
     outline: none;
     cursor: pointer;
 
+    &-input {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: var(--links-color);
+      font-size: var(--md-font-size);
+      background-color: var(--transparent);
+      border: none;
+      outline: none;
+      cursor: pointer;
+
+      & > span {
+        position: relative;
+        display: block;
+        width: 18px;
+        height: 18px;
+        margin: 0 5px 2px;
+        border: 2px solid var(--links-color);
+        border-radius: 9px;
+
+        &::before, &::after {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          display: block;
+          width: 10px;
+          height: 2px;
+          background-color: var(--links-color);
+          transform: translate(-50%, -50%);
+          content: '';
+        }
+
+        &::after {
+          top: 45%;
+          left: 2px;
+          transform: rotate(90deg);
+          
+        }
+      }
+
+      & > p {
+        margin-bottom: 0;
+      }
+    }
+
     & > p {
       display: none;
       margin-bottom: 0;
