--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,10 @@
   width: 64px;
   height: 64px;
   background-color: var(--copyblock-color);
+  background-image: url(../../images/moon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 25px;
   border: none;
   border-radius: 32px;
   outline: none; 
