--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -87,6 +87,12 @@
 
     &-send {
       background-image: url(../../images/send_dark.svg);
+
+      & > a {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
     }
 
     &-copy {
