--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@
   --copyblock-color: rgba(0, 0, 0, 0.04);
   --input-color: rgba(0, 0, 0, 0.02);
   --links-color: #4E529A;
+  --success-color: #27AE60;
   --transparent: transparent;
 
   --sm-font-size: 14px;
@@ -51,6 +52,7 @@ body.dark {
   --input-color: rgba(255, 255, 255, 0.02);
   --currency-block-color: rgba(255, 255, 255, 0.1);
   --links-color: #4E529A;
+  --success-color: #27AE60;
   --transparent: transparent;
 }
 
