feat: styling components, animations

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -8,6 +8,7 @@
     max-width: 560px;
     margin-top: 15px;
     padding-top: 30px;
+    padding-bottom: 25px;
     background-color: var(--modal-bg-color);
     border-radius: 5px;
 
