--- a/src/index.scss
+++ b/src/index.scss
@@ -174,7 +174,6 @@ h2 {
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 500px;
   height: 55px;
   color: var(--button-text-color);
   font-size: var(--md-font-size);
@@ -184,6 +183,17 @@ h2 {
   outline: none;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+
+  &.disabled {
+    color: var(--hints-color);
+    background-color: var(--border-color);
+    box-shadow: var(--transparent);
+    cursor: default;
+
+    &:hover {
+      background-color: var(--border-color);
+    }
+  }
 
   &:hover {
     background-color: var(--button-bg-hover);
@@ -198,6 +208,139 @@ h2 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+  }
+}
+
+.logo-textless {
+  width: 70px;
+  height: 40px;
+  margin: 50px 0 30px;
+  background-image: url(./images/logo.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#walletconnect-qrcode-modal {
+  background-color: var(--transparent);
+}
+
+#walletconnect-wrapper {
+  position: relative;
+}
+
+.walletconnect-modal__base {
+  width: 560px !important;
+  height: 500px;
+  transform: translateY(-60%) !important;
+}
+
+.wallets-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 150px);
+  max-width: 95vw;
+  margin: 0 2.5vw;
+}
+
+.welcome-text {
+  text-align: center;
+
+  & > h1 {
+    margin-bottom: 0;
+    color: var(--dark-color);
+    font-weight: var(--bold-font-weight);
+    font-size: var(--large-font-size);
+
+  }
+
+  & > h2 {
+    color: var(--dark-color);
+    font-size: var(--large-font-size);
+
+  }
+
+  & > p {
+    margin: 60px 0 0;
+    color: var(--dark-color);
+    font-size: var(--md-font-size);
+
+  }
+}
+
+.custom-selector {
+  position: relative;
+  width: 100%;
+  max-width: 100px;
+  height: 25px;
+
+  &-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100px;
+    height: 25px;
+    text-overflow: ellipsis;
+    cursor: pointer;
+
+    & > p {
+      margin-bottom: 0;
+      padding-right: 15px;
+      overflow: hidden;
+      color: var(--dark-color);
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
+    & > div {
+      width: 15px;
+      height: 10px;
+      background-image: url(./images/arrow-select.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+    
+    & > span {
+      display: block;
+      width: 25px;
+      height: 25px;
+      margin-left: 25px;
+      background-image: url(./images/mdi_people.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+
+  &-list {
+    position: absolute;
+    left: 0;
+    z-index: 10000;
+    padding-left: 0;
+    background-color: var(--modal-bg-color);
+    border: none;
+    border-radius: 5px;
+    transform: translateX(-50%);
+    transition: opacity 200ms ease;
+
+    &-item {
+      padding: 5px 10px;
+      color: var(--dark-color);
+      list-style-type: none;
+      border-bottom: 1px solid var(--border-color);
+      cursor: pointer;
+    }
+
+    &.open {
+      height: auto;
+      opacity: 1;
+    }
+  
+    &.closed {
+      width: 0;
+      height: 0;
+      max-height: 0;
+      padding: 0;
+      overflow: hidden;
+      opacity: 0;
+    }
   }
 }
 
@@ -288,61 +431,6 @@ body.dark > #root {
         }
       }
     }
-  }
-}
-
-.logo-textless {
-  width: 70px;
-  height: 40px;
-  margin: 50px 0 30px;
-  background-image: url(./images/logo.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-#walletconnect-qrcode-modal {
-  background-color: var(--transparent);
-}
-
-#walletconnect-wrapper {
-  position: relative;
-}
-
-.walletconnect-modal__base {
-  width: 560px !important;
-  height: 500px;
-  transform: translateY(-60%) !important;
-}
-
-.wallets-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 150px);
-  max-width: 95vw;
-  margin: 0 2.5vw;
-}
-
-.welcome-text {
-  text-align: center;
-
-  & > h1 {
-    margin-bottom: 0;
-    color: var(--dark-color);
-    font-weight: var(--bold-font-weight);
-    font-size: var(--large-font-size);
-
-  }
-
-  & > h2 {
-    color: var(--dark-color);
-    font-size: var(--large-font-size);
-
-  }
-
-  & > p {
-    margin: 60px 0 0;
-    color: var(--dark-color);
-    font-size: var(--md-font-size);
-
   }
 }
 
