fix: pr comments

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -6,21 +6,21 @@
   &-back {
     position: absolute;
     left: 20px;
-    width: 48px;
-    height: 48px;
+    width: 50px;
+    height: 50px;
     background: url(../../images/arrow-back.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 32px;
+    background-size: 35px;
     border: none;
-    border-radius: 24px;
+    border-radius: 25px;
     outline: none;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
     cursor: pointer;
   }
 
   &-fee {
-    margin-top: 24px;
+    margin-top: 25px;
     color: var(--dark-color);
     font-size: var(--sm-font-size);
     text-align: center;
@@ -79,6 +79,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 20px 0;
 
     & > p {
       color: var(--dark-color);
@@ -110,7 +111,7 @@
       transform: translateY(-50%);
 
       &.false {
-        right: 24px;
+        right: 25px;
       }
     }
   }
@@ -150,7 +151,6 @@
 
     &-address {
       width: 100%;
-      max-width: 180px;
       font-size: var(--md-font-size);
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -188,7 +188,19 @@
   }
 }
 
-.all-balances {
+.all-balance {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 110px;
+  padding: 0;
   color: var(--links-color);
   font-size: var(--md-font-size);
+  background-color: var(--transparent);
+  border: none;
+
+  & > span {
+    font-size: var(--xl-font-size);
+  }
 }
